# adversarial-training

./: .gitignore  LICENSE  eval_setup.sh  pyproject.toml  test_code.py
adversarial_training.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
example/: run.sh
example/wandb/: latest-run
example/wandb/run-20250403_000306-fnmvcg6j/: run-fnmvcg6j.wandb
example/wandb/run-20250403_001820-h916p7pe/: run-h916p7pe.wandb
example/wandb/run-20250403_003722-mfkyymu6/: run-mfkyymu6.wandb
example/wandb/run-20250403_025642-wmqmvslz/: run-wmqmvslz.wandb
host_code/: HumanEval_0.jsonl  HumanEval_1.jsonl  HumanEval_2.jsonl  HumanEval_3.eval_results.json  HumanEval_6.jsonl  HumanEval_8.jsonl
modified-evalplus/: Dockerfile
modified_evalplus/: evaluate.py  instructions.MD
results/: HumanEval_3.eval_results.json  HumanEval_3.jsonl  HumanEval_4.jsonl  HumanEval_5.jsonl  HumanEval_7.jsonl  HumanEval_9.jsonl
train_kodcode/: Qwen-2.5-0.5B.sh  Qwen-2.5-3B.sh  preprocess.py  preprocess.sh  print.py  test_baseline.py
train_kodcode/evaluate_code/: __init__.py  firejail_exec.py  utils.py
train_reward/: config.yaml  custom_module.py  data.sh  debug_loader.py  disable_flash_attn.py  preprocess_data.py  preprocess_data_rl.py  preprocess_data_sft.py  preprocess_data_sft_helper.py  reward_function.py  sft.sh  sft_prompts.json  test.parquet  test_passing.py  test_pickle.py  train.parquet  train.sh  utils.py
train_reward/wandb/: latest-run
train_reward/wandb/run-20250402_010713-1xdl719r/: run-1xdl719r.wandb
verl/: README.md
verl/verl/trainer/: main_ppo.py
(+148 files in other folders)
