[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.5.0",
    "evalplus>=0.3.1",
    "flash-attn==2.7.4.post1",
    "setuptools>=78.1.0",
    "torch==2.4.0",
    "verl",
]

[tool.setuptools]
packages.find = {exclude = ["results", "modified_evalplus", "tests*"]}

[tool.uv.sources]
verl = { git = "https://github.com/volcengine/verl.git" }
